# basic_django

./: .coverage  db.sqlite3  pyproject.toml  requirements.txt
basic_django/: settings.py  urls.py
my_film_list/: admin.py  apps.py  models.py  tests.py
my_film_list/api/: rest_framework_views.py  urls.py
my_film_list/migrations/: 0001_initial.py  0002_obracinematografica_delete_filme.py
my_film_list/serializers/: ObraCinematograficaSerializer.py
my_film_list/tests/: tests_views.py
